代码沙箱-限制jvm最大堆内存